--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snake</title>
+        <script type="module" src="./scripts/index.js"></script>
+        <link rel="stylesheet" href="./styles/styles.css">
     </head>
     <body>
-        
+        <canvas id="playground">
+
+        </canvas>
     </body>
 </html>
