--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" href="./styles/styles.css">
     </head>
     <body>
-        <canvas id="playground">
-
-        </canvas>
+        <div class="game">
+            <p class="game__score">score: <span id="points"></span></p>
+            <canvas id="playground"></canvas>
+        </div>
     </body>
 </html>
