Add restart functionality

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,11 @@
     </head>
     <body>
         <div class="game">
-            <p class="game__score">score: <span id="points"></span></p>
+            <p class="game__score"><span id="points"></span></p>
             <canvas id="playground"></canvas>
+            <div class="game__restart" id="restartBtn">
+                <img src="assets/images/restart.svg" alt="restart game">
+            </div>
         </div>
     </body>
 </html>
