--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snake</title>
-        <script type="module" src="./scripts/index.js"></script>
-        <link rel="stylesheet" href="./styles/styles.css">
+        <script type="module" src="/src/app/index.js"></script>
+        <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
         <div class="game">
