--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Snake</title>
-    <link href="/canvas-snake/build.css" rel="stylesheet"></head>
-    <body>
-        <div class="game">
-            <p class="game__score"><span id="points"></span></p>
-            <canvas id="playground"></canvas>
-            <div class="game__restart" id="restartBtn">
-                <img src="/canvas-snake/8617fd05f1a41b018fab352519de27b0.svg" alt="restart game">
-            </div>
-        </div>
-    <script src="/canvas-snake/bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Snake</title><link href="/canvas-snake/build.css" rel="stylesheet"></head><body><div class="game"><p class="game__score"><span id="points"></span></p><canvas id="playground"></canvas><div class="game__restart" id="restartBtn"><img src="/canvas-snake/8617fd05f1a41b018fab352519de27b0.svg" alt="restart game"></div></div><script src="/canvas-snake/bundle.js"></script></body></html>
