Add mobile controls (only available with touch screens)

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,5 +13,14 @@
                 <img src="assets/images/restart.svg" alt="restart game">
             </div>
         </div>
+        <div class="controls" id="controls">
+            <div class="block controls__top" id="topBtn"></div>
+            <div class="controls__sides">
+                <div class="block controls__left" id="leftBtn"></div>
+                <div class="block controls__center"></div>
+                <div class="block controls__right" id="rightBtn"></div>
+            </div>
+            <div class="block controls__bottom" id="bottomBtn"></div>
+        </div>
     </body>
 </html>
